tests/negative/typecheck/try-error.orng
fn main() -> Int {
    f() catch 0
}

fn f() -> Char!Int {
    try g()
}

fn g() -> ()!Int {
    return .err
}